Removed redirect, minimal TOC

--- a/index.html
+++ b/index.html
@@ -1,9 +1,12 @@
- <html xmlns="http://www.w3.org/1999/xhtml">    
-  <head>      
-    <title>xmlizer</title>      
-    <meta http-equiv="refresh" content="0;URL='circularlabs_root/index.html'" />    
-  </head>    
-  <body> 
-    <p>This page has moved to a <a href="circularlabs_root/index.html">circularlabs_root/index.html</a>.</p> 
-  </body>  
+<!doctype html>
+<meta charset=utf-8>
+<head>      
+  <title>Mobius Documentation and Scripts on Github</title>      
+</head>    
+<body> 
+  <p><a href="///www.circularlabs.com">Original Documentation</a>.</p> 
+  <p><a href="circularlabs_root/index.html">Github Version of the Documentation</a>.</p> 
+  <p><a href="https://github.com/bwagner/mobius">Github Repo</a>.</p> 
+  <p><a href="https://github.com/bwagner/mobius/tree/master/scripts">Scripts</a>.</p> 
+</body>  
 </html>     
