changed http protocols

--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
   <title>Mobius Documentation and Scripts on Github</title>      
 </head>    
 <body> 
-  <p><a href="///www.circularlabs.com">Original Documentation</a>.</p> 
+  <p><a href="http://www.circularlabs.com">Original Documentation</a>.</p> 
   <p><a href="circularlabs_root/index.html">Github Version of the Documentation</a>.</p> 
-  <p><a href="https://github.com/bwagner/mobius">Github Repo</a>.</p> 
-  <p><a href="https://github.com/bwagner/mobius/tree/master/scripts">Scripts</a>.</p> 
+  <p><a href="///github.com/bwagner/mobius">Github Repo</a>.</p> 
+  <p><a href="///github.com/bwagner/mobius/tree/master/scripts">Scripts</a>.</p> 
 </body>  
 </html>     
